About page - tweak fixed navbar spacing/underline

--- a/app/styles/about.sass
+++ b/app/styles/about.sass
@@ -16,6 +16,7 @@
         top: 0
         width: 100%
       ul
+        margin-top: 5px
         padding-left: 0
         list-style: none
         li
@@ -27,7 +28,14 @@
             text-transform: uppercase
             text-decoration: none
         li.active
-          border-bottom: 4px solid white
+          .label
+            padding-left: 0
+            padding-right: 0
+            padding-bottom: 0
+            margin-left: 0.6em
+            margin-right: 0.6em
+            border-bottom: 4px solid white
+            border-radius: 0
     
   #jumbotron
     background-color: $navy
